# eldispacho

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  action.hpp  buffer.hpp  common.h  common.hpp  docs.doxy  eldispacho.cpp  managed_container.hpp  processor.cpp  processor.hpp  utility.hpp
cmake/: uninstall.cmake
diagnostics/: logger.cpp  logger.hpp  message.hpp  server.cpp  server.hpp
example/: nested_structure.json
io/: request.hpp  response.hpp  server.cpp  server.hpp
model/: adjacency.hpp  channel.hpp  circulator_switch.cpp  circulator_switch.hpp  endpoint.cpp  endpoint.hpp  interface.cpp  interface.hpp  network.cpp  network.hpp  node.cpp  node.hpp  qswitch.cpp  qswitch.hpp  state.hpp
model/network/: circulator_switch.cpp  circulator_switch.hpp  debugger.cpp  debugger.hpp  endpoint.cpp  endpoint.hpp  node.cpp  node.hpp  null_endpoint.hpp  parser.cpp  parser.hpp  qswitch.cpp  qswitch.hpp  system.cpp  system.hpp
model/time/: functions.hpp  simulation_time.hpp  wall_time.hpp
net/: request.hpp  response.hpp  server.cpp  server.hpp
simulator/: adapter.cpp  adapter.hpp  client.cpp  client.hpp  client_pool.cpp  client_pool.hpp  request.hpp  response.hpp  unit.cpp  unit.hpp
tools/dspy/: dspy.py  readme.md
